- fixes mobile video page style problem - updates blockquote style on mobile
Former-commit-id: 5cd1c9375ea18bda9d69e32ffa56dbc90fad7994 [formerly b655fd27a09fd67c88edb0a6101e45f4f7cfca09 [formerly e2ec01cdac20777042105e09adb95f6ad11858a8]]
Former-commit-id: bf3e0bd4dfb694feb4c242a8c51d59e2e64eb4b5
Former-commit-id: 1b480cd0e72e7662b73c2e85169e7dd65f68c5f9

--- a/assets/stylesheets/app/page.scss
+++ b/assets/stylesheets/app/page.scss
@@ -154,7 +154,7 @@ article.page {
   blockquote {
     position: relative;
     margin: 0.25em auto;
-    padding: 0.25em 10px 0.25em 50px;
+    padding: 0.5em 10px 0.25em 25px;
     max-width: 500px;
     font-style: italic;
     font-size: 18px;
@@ -165,11 +165,11 @@ article.page {
   blockquote:before {
     position: absolute;
     top: -20px;
-    left: 5px;
+    left: 0;
     display: block;
     color: #999;
     content: "\201C";
-    font-size: 80px;
+    font-size: 50px;
   }
 
   blockquote cite {
@@ -342,9 +342,23 @@ article.page {
 
   &.image-background .content {
     position: absolute;
+    right: 0;
     bottom: 0;
     left: 0;
     height: 50%;
+  }
+
+  &.image-background.video .content {
+    position: static;
+    height: auto;
+  }
+
+  &.image-background.video.white .content {
+    background: white;
+  }
+
+  &.image-background.video.black .content {
+    background: black;
   }
 
   &.image-background .cover-area {
@@ -375,61 +389,6 @@ article.one-column {
 
   &.image-background:before {
     content: none;
-  }
-}
-
-article.fullscreen {
-  overflow: hidden;
-  height: 100% !important;
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  &:before {
-    display: inline-block;
-    margin-right: -0.25em; /* Adjusts for spacing */
-    height: 100%;
-    content: '';
-    vertical-align: middle;
-  }
-
-  .top-image {
-    margin: 0;
-  }
-
-  figure {
-    width: 100%;
-    height: 100%;;
-  }
-
-  iframe {
-    background: #000;
-  }
-
-  figcaption {
-    @include box-sizing(border-box);
-    @include background-image(linear-gradient(rgba(0,0,0,0), rgba(0,0,0, 0.95)));
-    position: absolute;
-    bottom: 0;
-    overflow: hidden;
-
-    padding: 20px 40px 0 40px;
-    width: 100%;
-    height: 80px;
-    color: #ccc;
-    text-align: center;
-    font-style: italic;
-    font-family: georgia;
-    line-height: 35px;
-  }
-
-  .content {
-    position: relative;
-    overflow-y: auto;
-    margin: 5% 0;
-    padding: 20px;
-    max-height: 100%;
-    width: 45%;
-    vertical-align: middle;
   }
 }
 
@@ -521,7 +480,6 @@ article.page.toc {
   }
 }
 
-
 article.page.has-product {
   text-align: left;
 
@@ -608,8 +566,6 @@ article.page.has-product {
   }
 }
 
-// Mutli column pagination
-
 @include min-screen(768) {
 
   article.page {
@@ -624,6 +580,15 @@ article.page.has-product {
 
     .content {
       padding: 30px;
+    }
+
+    blockquote {
+      padding: 0.25em 10px 0.25em 50px;
+    }
+
+    blockquote:before {
+      left: 5px;
+      font-size: 80px;
     }
   }
 
@@ -674,9 +639,14 @@ article.page.has-product {
       content: none;
     }
 
-    &.video .cover-area{
+    &.video .cover-area {
       display: block;
       height: 100%;
+    }
+
+    &.video .content {
+      margin: 0;
+      width: 100%;
     }
   }
 
@@ -864,37 +834,6 @@ article.page.has-product {
     }
   }
 }
-
-// @media screen and (orientation:portrait) {
-//   article.page .col.half {
-    // height: 49.99%;
-   //  width: 100%;
-   //  background: white;
-
-   //  .image {
-   //    left: 25%;
-   //    position: relative;
-   //    width: 50%;
-   //  }
-
-   //  .info {
-   //    text-align: center;
-   //    .store {
-   //      margin: 0;
-   //    }
-
-   //    .price {
-   //      line-height: 37px;
-   //      vertical-align: middle;
-   //    }
-
-   //    p {
-   //      margin-top: 10px;
-   //      text-align: left;
-   //    }
-   //  }
-  // }
-// }
 
 // TODO: MOVE TO ADMIN
 #preview_item_content {
